--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/robertarthury/take-notes-not-boats#readme",
   "dependencies": {
-    "express": "^4.18.0"
-  }
+    "express": "^4.18.1"
+  },
+  "devDependencies": {}
 }
